--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,2 @@
 @import "primeicons/primeicons.css";
-// Import all of Bootstrap's CSS
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap/scss/bootstrap";
