add store method to get a curriculum by ID

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Custom variables
 // -------------------------------------------------------------
 @import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
-$primary: #ff5e14;
+$primary: #0f172a; // Indigo 500
 $secondary: #02245b;
-$accent: #124e66;
+$accent: #14b8a6; // Teal accent
 
 $main-font: "Oxygen", sans-serif;
