added the edit curriculum component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,3 +2,7 @@
 @import "variables";
 @import "bootstrap/scss/bootstrap";
 @import "primeicons/primeicons.css";
+
+.no-wrap-btn {
+  white-space: nowrap;
+}
